# trabalho5-cg

./: ArcBall.cpp  ArcBall.h  Bezier.h  CMakeLists.txt  Delaunay.h  Edge.h  Point2D.h  Point3D.h  Polygonal.h  README.md  Triangle.h  globals.h  main.cpp
